Adding about 1000 lines of documentation across core, pacakger and CASCADE. Adding tests to PitData, and AES128Handler. Updating CommitDescription Package Info.